@@ -115,9 +115,13 @@ config MACH
 
 config ARCH_LH7A400
 	bool
+	select CPU_ARMV4
+	select CPU_ARM920T
 
 config ARCH_LH7A404
 	bool
+	select CPU_ARMV4
+	select CPU_ARM920T
 
 config MACH_LPD7A40X
 	bool
