@@ -1,3 +1,13 @@
+2005-09-28  Marc Singer  <elf@cerise.buici.com>
+
+	* src/arch-arm/Makefile: architecture and tune features.  This
+	fixes a build problem with native compilers. 
+
+	* src/arch-arm/Kconfig: New configuration features to select the
+	right architecture.  Lack of this was the source of a nasty build
+	error having to do with the fact that the default CPU type on ARM
+	doesn't support the half-word load.
+
 2005-09-27  Marc Singer  <elf@cerise.buici.com>
 
 	* src/arch-arm/entry/apex.lds.S: Enlarged the stacks.  We were
